Add Basic html structure to overall game area and score area

--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>The Ultimate Europe Quiz</title>
 </head>
 <body>
-    
+    <h1 class="heading">The Ultimate Europe Quiz</h1>
+    <h2>True Or False</h2>
+
+    <div class="game-area">
+
+    </div>
+
+    <div class="question-area">
+
+    </div>
+
+    <div class="answer-area">
+
+    </div>
+
+    <div class="score-area">
+        <p class="scores">Correct Answers <span id="score">0</span></p>
+        <p class="scores">Incorrect Answers <span id="score">0</span></p>
+    </div>
+
+    <div class="end-of-game">
+
+    </div>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
