Add html structure to controls area

--- a/index.html
+++ b/index.html
@@ -8,15 +8,30 @@
     <title>The Ultimate Europe Quiz</title>
 </head>
 <body>
+    <header>
     <h1 class="heading">The Ultimate Europe Quiz</h1>
-    <h2>True Or False</h2>
+    
+    </header>
 
     <div class="game-area">
-
+        <div id="intro-area">
+            <h3>Perfect for Trivia Night</h3>
+            <h4>True Or False</h4>
+        </div>
+        <img class="logo" src="assets/images/logo.png" alt="europe country signs">
+        <div class="controls-area">
+            <button class="start-btn btn" id="start-button" aria-label="Press here to start quiz">Start Quiz</button>
+            <button class="rules-btn btn" id="rules-button" aria-label="Press here to read the rules of the game">Rules</button>
+        </div>
     </div>
 
-    <div class="question-area">
 
+    <div id="question-area" class="hide">
+        <div>
+            <h3 id="question">Question <span id="question-number">1</span></h3>
+        </div>
+        <img class="logo" src="assets/images/logo.png" alt="europe country signs">
+        <p id="question">Question</p>
     </div>
 
     <div class="answer-area">
