--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     </header>
 
-    <div class="game-area">
+    <div id="game-area">
         <div id="intro-area">
             <h3>Perfect for Trivia Night</h3>
             <h4>True Or False</h4>
@@ -32,14 +32,14 @@
         <p id="question">Question</p>
         
 
-        <div class="answer-area">
+        <div id="answer-area">
 
         <button class="answer-btn" id="answer1" aria-label="Press here to choose answer">True</button>
         <button class="answer-btn" id="answer2" aria-label="Press here to choose answer">False</button>
         <button class="next-btn btn" id="next-button">Next</button>
        </div>
 
-       <div class="score-area">
+       <div id="score-area">
         <p class="scores">Correct Answers <span id="score">0</span></p>
         <p class="scores">Incorrect Answers <span id="score">0</span></p>
        </div>
