--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
        </div>
 
        <div id="score-area">
-        <p class="scores">Correct Answers <span id="score">0</span></p>
-        <p class="scores">Incorrect Answers <span id="score">0</span></p>
+        <p class="scores">Correct Answers <span id="correct">0</span></p>
+        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
        </div>
        </div>
        <div id="end-of-game" class="hide">
