--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
        </div>
        </div>
        <div id="end-of-game" class="hide">
-        <h3>Congratulations you have completed the Quiz!!</h3>
+        <h3>Congratulations you have completed the Quiz!!!</h3>
         <p id="final-score-text"><span id="final-score">0</span></p>
 
        </div>
