--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             
         <div id="answer-area">
 
-        <button class="answer-btn" id="answer1" aria-label="Press here to choose answer">Answer 1</button>
-        <button class="answer-btn" id="answer2" aria-label="Press here to choose answer">Answer 2</button>
+        <button class="answer-btn" id="answer1" onclick="checkAnswer(1)" aria-label="Press here to choose answer">Answer 1</button>
+        <button class="answer-btn" id="answer2" onclick="checkAnswer(2)" aria-label="Press here to choose answer">Answer 2</button>
         
        </div>
 
